--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans|Philosopher" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700" rel="stylesheet">
-    <script src="../app/js/less.js" type="text/javascript"></script>
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.2/less.min.js" ></script>-->
+    <script src="./js/less.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.2/less.min.js" ></script>
     
  </head>
 
