--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">-->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet/less" type="text/css" href="../app/less/styles.less" >
-    <link rel="stylesheet/less" type="text/css" href="../app/less/responsive.less">
+    <link rel="stylesheet/less" type="text/css" href="less/styles.less" >
+    <link rel="stylesheet/less" type="text/css" href="less/responsive.less">
     <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans" rel="stylesheet">
