--- a/index.html
+++ b/index.html
@@ -425,9 +425,9 @@
               </div>
            </div>
         </footer>
-     <script src="./js/carusel.js"></script>
-     <script src="../app/js/jquery-3.3.1.min.js"></script>
-     <script src="../app/js/lightbox.js"></script>
-     <script src="../app/js/main.js"></script>
+     <script src="js/carusel.js"></script>
+     <script src="js/jquery-3.3.1.min.js"></script>
+     <script src="js/lightbox.js"></script>
+     <script src="js/main.js"></script>
     </body>
  </html>
