--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          </header>
                   <!-- section with vacation ideas -->
 
-                  <!--booki--form------>
+                  <!--booking form-->
          <section class="ideas">
              <div class="container>">
                  <div class="booking_menu">
